legacy/prometheus-helm/ingress-controllers/alert-manager-ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-server
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: alertmanager.home.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093
