legacy/prometheus-helm/ingress-controllers/prometheus-ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: prometheus.home.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
